--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>mpxhf demo</title>
+    <title>mympvue demo</title>
     <style>
     	*{
     		font-size: 10px;
